[gd_scene load_steps=2 format=3 uid="uid://ds00pv1gp5wex"]

[ext_resource type="Script" path="res://Scripts/LoginScreen.gd" id="1_n77w3"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n77w3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MENOGRAM 2"
horizontal_alignment = 1

[node name="Username" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "username"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "password"
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "log in"

[node name="AttemptMessage" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Attempting to login..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="InvalidData" type="Popup" parent="."]
initial_position = 2
size = Vector2i(340, 100)

[node name="Panel" type="Panel" parent="InvalidData"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InvalidData"]
offset_right = 340.0
offset_bottom = 61.0

[node name="Label" type="Label" parent="InvalidData/VBoxContainer"]
layout_mode = 2
text = "Please enter valid username and password"
horizontal_alignment = 1

[node name="AcceptButton" type="Button" parent="InvalidData/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Accept"

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="InvalidData/VBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
